--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,39 @@ rfc3986==1.5.0
 sniffio==1.3.0
 typing-extensions==3.10.0.0
 yarl==1.8.1
+aiogram==2.22.2
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.9.1
+beautifulsoup4==4.11.1
+certifi==2022.9.24
+chardet==3.0.4
+charset-normalizer==2.1.1
+environs==8.0.0
+frozenlist==1.3.1
+googletrans==3.1.0a0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2022.10.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+magic-filter==1.0.9
+marshmallow==3.18.0
+multidict==6.0.2
+packaging==21.3
+pyparsing==3.0.9
+python-dotenv==0.21.0
+pytz==2022.5
+requests==2.28.1
+rfc3986==1.5.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+typing-extensions==3.10.0.0
+urllib3==1.26.13
+wikipedia==1.4.0
+yarl==1.8.1
