--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ADMINS = 5590726880
-BOT_TOKEN = 5673893431:AAEU4Wk3qS51tu_PFfjz5ZlniU6Yx8l-26M
+ADMINS = 1234567
+BOT_TOKEN = YOUR BOT TOKEN HERE
 ip = localhost
